--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.5.0-2": ["Tue Mar 21 2023", "Scott K Logan", "scott@openrobotics.org"]}
+{"1.6.0-1": ["Thu Apr 27 2023", "Scott K Logan", "scott@openrobotics.org"], "1.5.0-2": ["Tue Mar 21 2023", "Scott K Logan", "scott@openrobotics.org"]}
