--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/libyaml_vendor
-	previous = 
-	base = 794c6ae090f2
+	previous = 794c6ae090f2
+	base = 134c815fc2cb
 	trim = 
 	trimbase = 
